# Positron

./: .gitignore  LICENSE  README.md  foo.py  pyproject.toml  requirements.txt  setup.py
docs/: DEPENDENCIES.md  INSTALL.md  JAVASCRIPT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  main.py  next.config.mjs  package.json
docs/app/(home)/: layout.tsx  page.tsx
docs/content/docs/: architecture.mdx  dependencies.mdx  getting-started.mdx  index.mdx  installation.mdx  javascript.mdx  meta.json
docs/content/docs/api/: app.mdx  browser-window.mdx  dev-server.mdx  ipc.mdx  meta.json
docs/lib/: layout.shared.tsx
examples/nextjs-app/: main.py  package.json
examples/nextjs-app/app/: globals.css  page.tsx
examples/react-app/: README.md  index.html  main.py  package.json  pnpm-lock.yaml  test.html  test_raw_webview.py  test_simple.py  test_window.py  vite.config.js
examples/react-app/src/: App.css  App.jsx  Logo.css  Logo.jsx  index.css
examples/svelte-app/: main.py
examples/svelte-app/src/: App.svelte
examples/svelte-app/src/lib/: Logo.svelte
examples/vanilla-app/: README.md  main.py  script.js  style.css
examples/vue-app/: README.md  main.py  package.json
examples/vue-app/src/: App.vue  main.ts
positron/: __init__.py
positron/common/: __init__.py  utilities.py
positron/ipc/: __init__.py  main.py  main_webview.py  renderer.py  renderer_webview.py
positron/main/: __init__.py  app.py  app_webview.py  browser_window.py  browser_window_webview.py
positron/renderer/: __init__.py  dev_server.py
scripts/: test_simple.py  test_tkinterweb.py
(+1 files in other folders)
